--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
+.title {
+  font-family: 'Raleway', sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 2rem;
   text-align: center;
+  margin-bottom: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
+  border: 1px solid #000;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-button {
+  display: block;
+  font-family: 'Raleway', sans-serif;
+  border: none;
+  padding: 15px 20px;
+  width: 300px;
+  background: #2112f6;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1.2rem;
+  transition: ease-in-out 0.1s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-button:hover {
+  background: #4e42f4;
+}
+
+
+
+.textinput {
+  display: block;
+  font-family: 'Raleway', sans-serif;
+  background-color: transparent;
+  border: 1px solid #555;
+  width: 350px;
+  height: 50px;
+  padding: 0px 20px;
+  outline: none;
+  border-radius: 3px;
+  letter-spacing: 1.2px;
+}
+
+.option {
+  display: block;
+  border: none;
+  cursor: pointer;
+  width: 250px;
+  height: 40px;
+  border-radius: 5px;
+  background-color: #ddd;
+  border: 2px solid #aaa;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
+  font-size: 1.01rem;
+}
+
+.option:hover {
+  background-color: #ccc;
+}
+
+
+thead {
+  background-color: #0d09ec;
+  color: #fff;
+}
+
+table {
+  font-family: 'Raleway', sans-serif;
+}
+
+.hint {
+  border: none;
+  background-color: #ff6f00;
+  padding: 15px 25px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
+  font-size: 0.8rem;
+  cursor: pointer;
+  border-radius: 30px;
+}
+
+.hint:hover {
+  background-color: #e16100;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 40px;
+  font-size: 1.2rem;
+  font-family: 'Poppins', sans-serif;
 }
