--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@
   font-size: 1.01rem;
 }
 
+
 .option:hover {
   background-color: #ccc;
 }
@@ -77,6 +78,20 @@ thead {
 
 table {
   font-family: 'Raleway', sans-serif;
+}
+
+input[type="number"] {
+  width: 100px;          /* Full width */
+  padding: 10px;       /* Padding inside the input */
+  border: 2px solid #ccc; /* Light gray border */
+  border-radius: 5px;  /* Rounded corners */
+  font-size: 16px;     /* Font size */
+  transition: border-color 0.3s; /* Smooth transition for focus */
+}
+
+input[type="number"]:focus {
+  border-color: #007BFF; /* Change border color on focus */
+  outline: none;          /* Remove default outline */
 }
 
 .hint {
